Fix issue with boolean property label overflow

--- a/src/components/common/Input/Checkbox/Checkbox.scss
+++ b/src/components/common/Input/Checkbox/Checkbox.scss
@@ -12,7 +12,7 @@ $height: $font-size + $base-padding * 1.5;
   }
 
   &.wide {
-    height: $height;
+    min-height: $height;
     padding: 7px $input-padding-horizontal;
 
     .checkbox {
